Testing Main class fails